<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">No Data</string>
    <string name="my_app">My App</string>
    <string name="title">title</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="priority_high">Priority High</string>
    <string name="priority_low">Priority Low</string>
    <string name="delete_all">Delete All</string>
    <string name="add">Add</string>
    <string name="Welcome_txt">Hi!!.....Welcome</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="my_title">My Title</string>
    <string name="some_description">Some random description</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="login_page">Login Page</string>
    <string name="please_enter_full_name">"Please enter your Full Name"</string>
    <string name="please_enter_age">"Please enter your Age"</string>
    <string name="please_enter_email">"Please enter your Email"</string>
    <string name="please_enter_password">"Please enter your Password"</string>
    <string name="please_enter_valid_email">"Please enter a valid Email Id"</string>
    <string name="please_check_your_internet">"Please check your internet connection"</string>
    <string name="lottie_splash">https://assets2.lottiefiles.com/packages/lf20_dtg9nxtp.json</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="register">Register</string>
    <string name="register_user">Register User</string>
    <string name="take_screen_shot_activity">Activity Screenshot</string>
    <string name="take_screen_shot_view">Layout Screenshot</string>
    <string name="take_save_screen_shot">Save Screenshot</string>
    <string name="reset">Reset</string>
    <string name="toast_message_screenshot">First Take any Screenshot</string>
    <string name="toast_message_screenshot_success">Screenshot saved successfully.</string>
    <string name="settings_message">Go to Permissions to Grant Storage</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="info">Info</string>
    <string name="info_description">infoDesription</string>

    <string-array name="priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>
</resources>